c/examples/gcc/testsuite/c-c++-common/pr92833-3.c
/* Six marker characters at EOF, causes conflict marker detector to peek 4
   tokens. */

/* { dg-error "expected" } */ >>>>>>